Overflow fix 3

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	overflow-x: hidden;
 }
+#wrapper {
+	position: relative;
+	overflow-x: hidden;
+}
 .center-box {
 	width: 80%;
     margin: auto;
